--- a/.drone.yml
+++ b/.drone.yml
@@ -11,3 +11,5 @@ steps:
       from_secret: docker_password
     repo: deamos/osp-hub-api
     auto_tag: true
+- name: deploy
+    image: deamos/osp-hub-api:latest
