--- a/.drone.yml
+++ b/.drone.yml
@@ -2,7 +2,7 @@ kind: pipeline
 name: default
 
 steps:
-- name: docker
+- name: build
   image: plugins/docker
   settings:
     username:
@@ -11,5 +11,3 @@ steps:
       from_secret: docker_password
     repo: deamos/osp-hub-api
     auto_tag: true
-- name: deploy-osp
-    image: deamos/osp-hub-api
