--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ python-dotenv
 requests
 flask-sqlalchemy
 flask-script==2.0.5
+gevent==20.9.0
+gevent-websocket==0.10.1
+greenlet==0.4.17
+flask-limiter==1.1.0
+gunicorn==20.1.0
