--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-Flask==1.1.2
-flask-restplus==0.13.0
-Flask-Migrate==2.6.0
+Flask==2.1.2
+flask-restx==0.5.1
+Flask-Migrate==3.1.0
 python-dotenv
 requests
 flask-sqlalchemy
-flask-script==2.0.5
-gevent==20.9.0
+flask-script==2.0.6
+gevent==21.12.0
 gevent-websocket==0.10.1
-greenlet==0.4.17
+greenlet==1.1.2
 flask-limiter==1.1.0
 gunicorn==20.1.0
-Jinja2==2.11.3
-markupsafe==2.0.1
-itsdangerous==2.0.1
-werkzeug==0.16.1
+Jinja2==3.1.2
+markupsafe==2.1.1
+itsdangerous==2.1.2
+werkzeug==2.1.2
+flask-caching==1.11.1
