--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Flask==2.1.2
 flask-restx==0.5.1
 Flask-Migrate==3.1.0
-python-dotenv
-requests
-flask-sqlalchemy
+python-dotenv==0.20.0
+requests==2.28.1
+celery==5.2.7
+flask-sqlalchemy==2.5.1
 flask-script==2.0.6
 gevent==21.12.0
 gevent-websocket==0.10.1
@@ -15,3 +16,4 @@ markupsafe==2.1.1
 itsdangerous==2.1.2
 werkzeug==2.1.2
 flask-caching==1.11.1
+SQLAlchemy==1.4.37
