--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,6 @@ itsdangerous==2.1.2
 werkzeug==2.1.2
 flask-caching==1.11.1
 cachelib==0.8.0
-sentry-sdk==1.9.0
+sentry-sdk==1.9.2
 SQLAlchemy==1.4.37
+blinker==1.5
