--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,23 +30,17 @@ services:
       start_period: 30s
   
   osp_hub:
-    build: .
+    image: deamos/osp-hub-api:latest
     restart: unless-stopped
-
     mem_limit: 2048m
     memswap_limit: 2304m
     mem_reservation: 2048m
-
-    labels:
-      - "traefik.enable=true"
-    #  - "traefik.http.routers.streamingapp.entrypoints=websecure"
-      - "traefik.http.routers.osphub.rule=Host(`osphub.internal.divby0.net`)"
-    #  - "traefik.http.routers.streamingapp.tls.domains[0].main=osp.example.com"
-    #  - "traefik.http.routers.streamingapp.tls.certresolver=le"
-    #  - "traefik.http.services.streamingapp.loadBalancer.sticky.cookie.name=server_id"
-    #  - "traefik.http.services.streamingapp.loadBalancer.sticky.cookie.httpOnly=true"
     ports:
-      - '80'
+      - 5718:5000/tcp
+    labels:
+      traefik.enable: true
+      traefik.http.routers.osphubapi.rule: Host(`hubapi.internal.divby0.net`)
+      traefik.port: 5000
     environment:
       - OSP_HUB_DB=mysql+pymysql://osp:REPLACEOSPDBPASSWORD@osphub_db/osp
       # - TZ=ETC/UTC
