--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,9 +32,9 @@ services:
   osp_hub:
     image: deamos/osp-hub-api:latest
     restart: unless-stopped
-    mem_limit: 2048m
+    mem_limit: 1024m
     memswap_limit: 2304m
-    mem_reservation: 2048m
+    mem_reservation: 1024m
     ports:
       - 5718:5000/tcp
     labels:
@@ -42,6 +42,7 @@ services:
       traefik.http.routers.osphubapi.rule: Host(`hubapi.internal.divby0.net`)
       traefik.port: 5000
     environment:
+      - OSP_CORE_TYPE=hub
       - OSP_HUB_DB=mysql+pymysql://osp:REPLACEOSPDBPASSWORD@osphub_db/osp
       # - TZ=ETC/UTC
     networks:
@@ -49,3 +50,47 @@ services:
       - web
     depends_on:
       - osphub_db
+  
+    osp_hub_celery:
+      image: deamos/osp-hub-api:latest
+      restart: unless-stopped
+      mem_limit: 1024m
+      memswap_limit: 2304m
+      mem_reservation: 1024m
+      ports:
+        - 5718:5000/tcp
+      labels:
+        traefik.enable: true
+        traefik.http.routers.osphubapi.rule: Host(`hubapi.internal.divby0.net`)
+        traefik.port: 5000
+      environment:
+        - OSP_CORE_TYPE=celery
+        - OSP_HUB_DB=mysql+pymysql://osp:REPLACEOSPDBPASSWORD@osphub_db/osp
+        # - TZ=ETC/UTC
+      networks:
+        - osphub
+        - web
+      depends_on:
+        - osphub_db
+
+    osp_hub_celery_beat:
+      image: deamos/osp-hub-api:latest
+      restart: unless-stopped
+      mem_limit: 512m
+      memswap_limit: 2304m
+      mem_reservation: 512m
+      ports:
+        - 5718:5000/tcp
+      labels:
+        traefik.enable: true
+        traefik.http.routers.osphubapi.rule: Host(`hubapi.internal.divby0.net`)
+        traefik.port: 5000
+      environment:
+        - OSP_CORE_TYPE=beat
+        - OSP_HUB_DB=mysql+pymysql://osp:REPLACEOSPDBPASSWORD@osphub_db/osp
+        # - TZ=ETC/UTC
+      networks:
+        - osphub
+        - web
+      depends_on:
+        - osphub_db
