--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,15 @@ services:
       retries: 5
       start_period: 30s
   
+    osphub_redis:
+      image: redis
+      restart: unless-stopped
+      mem_limit: 128m
+      memswap_limit: 256m
+      mem_reservation: 128m
+      networks:
+        - osphub
+  
   osp_hub:
     image: deamos/osp-hub-api:latest
     restart: unless-stopped
@@ -43,6 +52,9 @@ services:
       traefik.port: 5000
     environment:
       - OSP_CORE_TYPE=hub
+      - OSP_REDIS_HOST=osphub_redis
+      - OSP_REDIS_PORT=6379
+      - OSP_REDIS_PASSWORD=
       - OSP_HUB_DB=mysql+pymysql://osp:REPLACEOSPDBPASSWORD@osphub_db/osp
       # - TZ=ETC/UTC
     networks:
@@ -50,6 +62,7 @@ services:
       - web
     depends_on:
       - osphub_db
+      - osphub_redis
   
   osp_hub_celery:
     image: deamos/osp-hub-api:latest
@@ -61,6 +74,9 @@ services:
       - 5000/tcp
     environment:
       - OSP_CORE_TYPE=celery
+      - OSP_REDIS_HOST=osphub_redis
+      - OSP_REDIS_PORT=6379
+      - OSP_REDIS_PASSWORD=
       - OSP_HUB_DB=mysql+pymysql://osp:REPLACEOSPDBPASSWORD@osphub_db/osp
       # - TZ=ETC/UTC
     networks:
@@ -68,6 +84,7 @@ services:
       - web
     depends_on:
       - osphub_db
+      - osphub_redis
 
   osp_hub_celery_beat:
     image: deamos/osp-hub-api:latest
@@ -79,6 +96,9 @@ services:
       - 5000/tcp
     environment:
       - OSP_CORE_TYPE=beat
+      - OSP_REDIS_HOST=osphub_redis
+      - OSP_REDIS_PORT=6379
+      - OSP_REDIS_PASSWORD=
       - OSP_HUB_DB=mysql+pymysql://osp:REPLACEOSPDBPASSWORD@osphub_db/osp
       # - TZ=ETC/UTC
     networks:
@@ -86,3 +106,4 @@ services:
       - web
     depends_on:
       - osphub_db
+      - osphub_redis
