--- a/docker-files.d/supervisord-celery-flower.conf
+++ b/docker-files.d/supervisord-celery-flower.conf
@@ -5,4 +5,4 @@ nodaemon=true
 directory=/app
 user=www-data
 group=www-data
-command=/usr/local/bin/celery -A app.celery flower --address=0.0.0.0
+command=/usr/local/bin/celery -A app.celery flower
