--- a/.drone.yml
+++ b/.drone.yml
@@ -29,6 +29,7 @@ steps:
   when:
     event:
       - push
+      - custom
 - name: publish-test
   image: appleboy/drone-ssh
   settings:
@@ -44,6 +45,7 @@ steps:
   when:
     event:
       - push
+      - custom
 
 ---
 kind: pipeline
@@ -66,6 +68,7 @@ steps:
   when:
     event:
       - push
+      - custom
   commands:
     - echo -n "$(cat version), latest" > .tags
 - name: build
@@ -83,3 +86,4 @@ steps:
   when:
     event:
       - push
+      - custom
